# AB_programacion

./: Citamedica.cpp  Citamedica.h  Medico.cpp  Medico.h  Paciente.cpp  Paciente.h  README.md  Servicio.cpp  Servicio.h  SimuladorHospital.cpp  SimuladorHospital.lastbuildstate  SimuladorHospital.sln  SimuladorHospital.vcxproj  SimuladorHospital.vcxproj.filters  main.cpp  vc143.idb
AB_programacion/: AB_programacion.cpp  AB_programacion.h  CMakeLists.txt  CMakeSettings.json
AB_programacion/include/: citamedica.h  medico.h  paciente.h
AB_programacion/src/: citamedica.cpp  main.cpp  medico.cpp  paciente.cpp
SimuladorHospital/Simulado.5d221743/x64/Debug/Simulado.5d221743.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  SimuladorHospital.lastbuildstate
